# stable-imitation-policy-with-waypoints

./: .gitignore  README.md  environment-mac.yaml  environment.yaml  setup.py  train_waypoints.py
kinova-arm-master/: CONTRIBUTING.md  README.md
kinova-arm-master/base_controller/: CMakeLists.txt  README.md  package.xml
kinova-arm-master/base_controller/config/: basic_config.yaml
kinova-arm-master/base_controller/launch/: example_moveit.launch  gen3lite.launch
kinova-arm-master/base_controller/scripts/: base_control_gen3lite.py  example_moveit.py
kinova-arm-master/base_controller/worlds/: sample.world
kinova-arm-master/experiments/: experiment_env.py  experiment_test.py  kortex_api_wrap.py  simple_connection.py
lib/: learn_nn_ds.py  learn_ply_ds.py
lib/nns/: euclidean_flows.py  networks.py
lib/sos/: optimize_lgpds_cvxpy.py  optimize_plyds_scipy.py
lib/utils/: data_loader.py
src/utils/: data_loader-load_hdf5-tester.py  data_loader.py
stable-imitation-policy-with-waypoints/: imitate-task.py  kitchen1-nn-pert-noise.txt  nn-seg-way-noise.txt  nn-seg-way-noise2.txt  nn-seg-way-pert-noise.txt  nn-seg-way-pert.txt  nn-seg-way.txt  preprocess.sh  rip.sh  run-imitation-process.sh  snds-seg-way-noise.txt  snds-seg-way-pert-noise.txt  snds-seg-way-pert.txt  snds-seg-way.txt  test-file.txt  test.sh  test3.sh  test4.sh  train_waypoints.py  trajectory_13-09-15-06.csv
stable-imitation-policy-with-waypoints/config/: controller.json  kitchen1-nn-pert-noise.json  kitchen1-nn-pert.json  kitchen1-nn-seg-pert-noise.json  kitchen1-nn-seg-pert.json  kitchen1-nn-seg-way-pert-noise.json  kitchen1-nn-seg-way-pert.json  kitchen1-nn-seg-way.json  kitchen1-nn-seg.json  kitchen1-nn.json  kitchen1-snds-pert-noise.json  kitchen1-snds-seg-pert-noise.json  kitchen1-snds-seg.json  (+13 more)
stable_imitation_policy_with_waypoints.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+960 files in other folders)
